Fix customer delete

--- a/practice/practise-12/src/main/resources/application.yml
+++ b/practice/practise-12/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
 #      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
     properties:
       hibernate:
