--- a/practice/notifications/src/main/resources/application.yaml
+++ b/practice/notifications/src/main/resources/application.yaml
@@ -6,6 +6,6 @@ grpc:
 
 telegram:
   bot:
-    username: HseKpoBot
-    token: 7668683034:AAHSxhMeXGgDROKrqI7ZrFpS7rye_NZMzzw
-    chat-id: "806256256"
+    username: ${USERNAME}
+    token: ${TELEGRAM_BOT_TOKEN}
+    chat-id: ${TELEGRAM_CHAT_ID}
