--- a/homework/hw-2/docker-compose.yml
+++ b/homework/hw-2/docker-compose.yml
@@ -23,7 +23,6 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/file_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
     ports:
       - "8081:8081"
     depends_on:
@@ -37,12 +36,16 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/file_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
     ports:
       - "8082:8082"
     depends_on:
       postgres:
         condition: service_healthy
 
+  gateway:
+    build: gateway
+    container_name: gateway_app
+    ports:
+      - "8080:8080"
 volumes:
   postgres_data:
